tests/errors/scalar_return_requires_cast.dang
# Returning String! from a function declared ID! requires an explicit cast.
pub makeID: ID! {
  "abc"
}
